--- a/wiki/encyclopedia/templates/encyclopedia/layout.html
+++ b/wiki/encyclopedia/templates/encyclopedia/layout.html
@@ -22,7 +22,7 @@
                     Create New Page
                 </div>
                 <div>
-                    Random Page
+                    <a href="{% url 'encyclopedia:random' %}"> Random Page </a>
                 </div>
                 {% block nav %}
                 {% endblock %}
