--- a/wiki/encyclopedia/templates/encyclopedia/edit.html
+++ b/wiki/encyclopedia/templates/encyclopedia/edit.html
@@ -1,13 +1,14 @@
 {% extends "encyclopedia/layout.html" %}
 
 {% block title %}
-    New Article
+    {{ entry }}
 {% endblock %}
 
 {% block body %}
-    <h1>Create a New Article</h1>
+    <div class="container">
+    <h1> {{ entry }} </h1>
 
-    <form action="{% url 'encyclopedia:new' %}" method="POST">
+    <form action="{% url 'encyclopedia:edit' entry %}" method="POST">
         {% csrf_token %}
         <div class="col-auto">
             {% for field in form %}
@@ -26,8 +27,10 @@
                     {% endif %}
                 </div>
             {% endfor %}
-            <button class="btn btn-primary" type="submit">Create Article</button>
+            <button class="btn btn-primary" type="submit">Save Article</button>
         </div>
     </form>
+    </div>
+    
 
 {% endblock %}
