--- a/commerce/auctions/templates/auctions/index.html
+++ b/commerce/auctions/templates/auctions/index.html
@@ -3,5 +3,22 @@
 {% block body %}
     <h2>Active Listings</h2>
 
-    TODO
+    <div class="card-deck">
+        {% for listing in listings %}
+        <div class="card">
+            <div class="card-body">
+                <img src="{{ listing.image_url|default:"https://bit.ly/2E7YCcq" }}" alt="{{ listing.title }}" class="card-img-top">
+                <h5 class="card-title">{{ listing.title }}</h5>
+                <h6 class="card-subtitle mb-2 text-muted">{{ listing.bids.last|default:"No bids" }}</h6>
+                <p class="card-text">{{ listing.description }}</p>
+            </div>
+            <div class="card-footer text-muted">
+                {% comment %} <a href="{% url 'auction:listing' listing.pk %}">View Listing</a> {% endcomment %}
+                <a href="#">View Listing</a>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+
+
 {% endblock %}
