--- a/commerce/auctions/templates/auctions/index.html
+++ b/commerce/auctions/templates/auctions/index.html
@@ -3,22 +3,32 @@
 {% block body %}
     <h2>Active Listings</h2>
 
-    <div class="card-deck">
-        {% for listing in listings %}
-        <div class="card">
-            <div class="card-body">
-                <img src="{{ listing.image_url|default:"https://bit.ly/2E7YCcq" }}" alt="{{ listing.title }}" class="card-img-top">
-                <h5 class="card-title">{{ listing.title }}</h5>
-                <h6 class="card-subtitle mb-2 text-muted">{{ listing.bids.last|default:"No bids" }}</h6>
-                <p class="card-text">{{ listing.description }}</p>
+    {% for listing in listings %}
+        <div class="card mb-3" style="max-width: 540px;">
+            <div class="row no-gutters">
+                <div class="col-md-4">
+                    <img src="{{ listing.image_url|default:"https://bit.ly/2E7YCcq" }}" alt="{{ listing.title }}" class="card-img">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ listing.title }}</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">
+                        {% if listing.bids.last %}
+                            ${{ listing.bids.last.amount }} bid by {{ listing.bids.last.user }}
+                        {% else %}
+                            No bids
+                        {% endif %}
+                        </h6>
+                        <p class="card-text">{{ listing.description }}</p>
+                    </div>
+                </div>
             </div>
+            
             <div class="card-footer text-muted">
-                {% comment %} <a href="{% url 'auction:listing' listing.pk %}">View Listing</a> {% endcomment %}
-                <a href="#">View Listing</a>
+                <a href="{% url 'listing' listing.pk %}">View Listing</a>
             </div>
         </div>
-        {% endfor %}
-    </div>
+    {% endfor %}
 
 
 {% endblock %}
