--- a/commerce/auctions/templates/auctions/watchlist.html
+++ b/commerce/auctions/templates/auctions/watchlist.html
@@ -25,7 +25,7 @@
             </div>
             
             <div class="card-footer text-muted">
-                <a href="{% url 'listing' listing.pk %}">View Listing</a>
+                <a href="{% url 'listing' listing.pk %}" class="stretched-link">View Listing</a>
             </div>
         </div>
     {% endfor %}
