--- a/commerce/auctions/templates/auctions/layout.html
+++ b/commerce/auctions/templates/auctions/layout.html
@@ -23,6 +23,9 @@
                         <li class="nav-item">
                             <a href="{% url 'new' %}" class="nav-link">Create Listing</a>
                         </li>
+                        <li class="nav-item">
+                            <a href="{% url 'categories' %}" class="nav-link">Categories</a>
+                        </li>
                         {% if user.is_authenticated %}
                         <li class="nav-item">
                             <a href="{% url 'watchlist' %}" class="nav-link">Watchlist</a>
