--- a/mail/mail/templates/mail/inbox.html
+++ b/mail/mail/templates/mail/inbox.html
@@ -12,6 +12,8 @@
     <hr>
 
     <div id="emails-view">
+        <div class="list-group emails-list">
+        </div>
     </div>
 
     <div id="compose-view">
