Add html for email view

--- a/mail/mail/templates/mail/inbox.html
+++ b/mail/mail/templates/mail/inbox.html
@@ -16,6 +16,14 @@
         </div>
     </div>
 
+    <div id="email-view">
+        <div class="row" id="email-sender"></div>
+        <div class="row" id="email-recipients"></div>
+        <div class="row" id="email-subject"></div>
+        <div class="row" id="email-timestamp"></div>
+        <div class="row" id="email-body"></div>
+    </div>
+
     <div id="compose-view">
         <h3>New Email</h3>
         <form id="compose-form">
