--- a/mail/mail/templates/mail/inbox.html
+++ b/mail/mail/templates/mail/inbox.html
@@ -17,11 +17,30 @@
     </div>
 
     <div id="email-view">
-        <div class="row" id="email-sender"></div>
-        <div class="row" id="email-recipients"></div>
-        <div class="row" id="email-subject"></div>
-        <div class="row" id="email-timestamp"></div>
-        <div class="row" id="email-body"></div>
+        <div class="row">
+            <div class="col-12">
+                <span class="h2" id="email-subject"></span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <b>From: </b><span id="email-sender"></span>
+            </div>
+            <div class="col-sm-2 offset-sm-4">
+                <small><span id="email-timestamp"></span></small>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <b>To: </b><span id="email-recipients"></span>
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col-md-10">
+                <span id="email-body"></span>
+            </div>
+        </div>
     </div>
 
     <div id="compose-view">
