Add archive and unarchive functionality

--- a/mail/mail/templates/mail/inbox.html
+++ b/mail/mail/templates/mail/inbox.html
@@ -41,6 +41,7 @@
                 <span id="email-body"></span>
             </div>
         </div>
+        <button class="btn btn-secondary" id=archive-button></button>
     </div>
 
     <div id="compose-view">
