Add New Post feature
Add code for new post API

Create HTML structure for React newPost app

Create framework to easily add csrftokens

Add new post functionality

Add animation to fade alerts away

Forbid posts from containing only whitespace

Fix error where submitting left newlines in box

Reset message so multiple alerts can be displayed

Hide help text when new post input is blank

Add placeholder text for clarity

--- a/project4/network/templates/network/layout.html
+++ b/project4/network/templates/network/layout.html
@@ -41,7 +41,7 @@
             </div>
           </nav>
         
-        <div class="body">
+        <div class="body container">
             {% block body %}
             {% endblock %}
         </div>
@@ -53,5 +53,7 @@
         <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
         <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
         <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+        {% block script %}
+        {% endblock %}
     </body>
 </html>
