--- a/project4/network/templates/network/index.html
+++ b/project4/network/templates/network/index.html
@@ -1,5 +1,10 @@
 {% extends "network/layout.html" %}
+{% load static %}
 
 {% block body %}
-    TODO
+    <div id="app"></div>
+{% endblock %}
+
+{% block script %}
+    <script type="text/babel" src="{% static 'network/index.jsx' %}"></script>
 {% endblock %}
