Add All Posts view features
Add url routing and API for delivering posts

Load all posts once index page is visited

Merge Allposts and NewPost

Update newsfeed on Enter keypress

Added styling for posts

Pass likes as a list of objects instead of as a count

Register Admin and models with admin panel

Create method to display posts better for admin

Send array of ID and username instead of full User model

Add check for if user has liked a post or not

--- a/project4/network/static/network/styles.css
+++ b/project4/network/static/network/styles.css
@@ -29,8 +29,35 @@
     }
 }
 
+@keyframes show {
+    0% {
+        opacity: 0;
+        height: 0px;
+        line-height: 0px;
+        margin-bottom: 20px;
+        font-size: 0px;
+    }
+    100% {
+        opacity: 1;
+        height: 100%;
+        line-height: 100%;
+        margin-bottom: 20px;
+        font-size: 100%;
+    }
+}
+
 .alert-hide {
     animation-name: hide;
     animation-duration: 5s;
+    animation-fill-mode: forwards;
+}
+
+.hearts {
+    color: red;
+}
+
+.fade-in {
+    animation-name: show;
+    animation-duration: 1s;
     animation-fill-mode: forwards;
 }
