--- a/project4/network/templates/network/layout.html
+++ b/project4/network/templates/network/layout.html
@@ -53,6 +53,14 @@
         <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
         <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
         <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+        <script>
+            window.django = {
+                user: {
+                    username: "{{ request.user.username }}",
+                    id: "{{ request.user.id }}"
+                }
+            };
+        </script>
         {% block script %}
         {% endblock %}
     </body>
