Add functionality for liking/unliking a post

--- a/project4/network/templates/network/layout.html
+++ b/project4/network/templates/network/layout.html
@@ -55,6 +55,7 @@
         <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
         <script>
             window.django = {
+                csrf: "{{ csrf_token }}",
                 user: {
                     username: "{{ request.user.username }}",
                     id: "{{ request.user.id }}"
