Add profile information to profile page

--- a/project4/network/templates/network/layout.html
+++ b/project4/network/templates/network/layout.html
@@ -58,7 +58,9 @@
                 csrf: "{{ csrf_token }}",
                 user: {
                     username: "{{ request.user.username }}",
-                    id: "{{ request.user.id }}"
+                    id: "{{ request.user.id }}",
+                    following: {{ request.user.following.count }},
+                    followers: {{ request.user.followers.count }}
                 }
             };
         </script>
